infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: atnafabebe/product_service
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  selector:
    app: product
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
